--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="body">#4E4B66</color>
+    <color name="shimmer">#C3C3C3</color>
+    <color name="placeholder">#A0A3BD</color>
+    <color name="input_background">#fff</color>
+
 </resources>
